# src/resources/tasks/task.model.js
@@ -2,14 +2,30 @@ const mongoose = require('mongoose');
 const addSchemaMethod = require('../../utils/addSchemaMethod');
 const { Schema } = mongoose;
 
+const CheckList = new Schema({
+  title: String,
+  order: Number,
+  checks: [
+    {
+      description: {
+        type: String,
+        required: true
+      },
+      checked: Boolean,
+      order: Number
+    }
+  ]
+});
+
 const Task = new Schema(
   {
-    title: String,
-    order: Number,
+    title: { type: String, required: true },
+    order: { type: Number, required: true },
     description: String,
     userId: String,
-    boardId: String,
-    columnId: String
+    checkList: [CheckList],
+    boardId: { type: String, required: true },
+    columnId: { type: String, required: true }
   },
   { collection: 'tasks' }
 );
